fix port editor bug from new ts version. update readme

--- a/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
+++ b/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
@@ -1,5 +1,5 @@
-﻿;-------------------------------------------------------------------------------
-#unset CAN_COMMANDS
+;-------------------------------------------------------------------------------
+#set CAN_COMMANDS
 #set enablehardware_test
 
 [MegaTune]
@@ -15,8 +15,9 @@
 #endif
    ;signature      = 20
    signature      = "speeduino_mini_GPIOV0.003 201706"
-;[TunerStudio]
-;   iniSpecVersion = 3.24
+
+   [TunerStudio]
+   iniSpecVersion = 3.57
 
 ;-------------------------------------------------------------------------------
 
@@ -112,7 +113,7 @@
 
    endianness          = little
    nPages              = 2
-   pageSize            = 128, 256
+   pageSize            = 128, 353
    pageIdentifier      = "\$tsCanId\x01" , "\$tsCanId\x02"
    pageActivationDelay = 10
 #if CAN_COMMANDS
@@ -352,75 +353,85 @@ page = 1
 page = 2	 
     ; Programmable output port settings
 	
-     port_Enabled      				= array ,  U08,    0,    	[  16], "on/off",   1.00000,   0.00000,   0.00,    1.00,     0 ; * (  16 bytes)
+     port_Enabled      				= array ,  U08,    0,    	[ 16], "on/off",   1.00000,   0.00000,   0.00,    1.00,     0 
+	 ; * (  16 bytes)
 ;1 if enabled 0 if not enabled
-     port_Condition    				= array ,  U08,    16,    	[  16] "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
+     port_Condition    				= array ,  U08,    16,    	[ 16x2] "",         1.00000,   0.00000,   32.00,  124.00,     0 
+	 ; * ( 16 bytes)
 ;<60 =61 >62 &38    
-	 port_Condition_relationship    = array ,  U08,    32,    	[  16], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
+	 port_Condition_relationship    = array ,  U08,    48,    	[ 16], "",         1.00000,   0.00000,   32.00,  124.00,     0 
+	 ; * ( 16 bytes)
 ;none = 32, or = 124, AND = 38, ! = 33	
-     port_InitValue    				= array ,  U08,    48,    	[    16], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * (  16 bytes)
+     port_InitValue    				= array ,  U08,    64,    	[ 16], "",         1.00000,   0.00000,   0.00,  1.00,     0 
+	 ; * (  16 bytes)
 ;1 on 0 off
-     port_PortValue    				= array ,  U08,    64,    	[    16], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * (  16 bytes)
+     port_PortValue    				= array ,  U08,    80,    	[ 16], "",         1.00000,   0.00000,   0.00,  1.00,     0
+	 ; * (  16 bytes)
 ;1 if active high 0 if active low
-     port_OutSize      				= array ,  U08,    80,    	[  16], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
+     port_OutSize      				= array ,  U08,    96,    	[ 16x2], "",         1.00000,   0.00000,   0.00,  255.00,     0
+	 ; * ( 16 bytes)
 ;unsure of purpose but must be present
-     port_OutOffset    				= array ,  U16,    96,    	[  16], "",         1.00000,   0.00000,   0.00, 32767.0,     0 ; * ( 32 bytes)
+     port_OutOffset    				= array ,  U16,    128,    	[ 16x2], "",         1.00000,   0.00000,   0.00, 1024.0,     0
+	 ; * ( 32 bytes)
 ;port offset refers to the offset value from the output channels
-     port_Threshold    				= array ,  U16,    128,    	[  16], "",         1.00000,   0.00000,	0.0,32767.0,     0 ; * ( 32 bytes)
+     port_Threshold    				= array ,  U16,    192,    	[ 16x2], "",         1.00000,   0.00000,	0.0, 32767.0,     0
+	 ; * ( 32 bytes)
 ;threshhold value for on/off
-     port_Hysteresis   				= array ,  U16,    160,    	[  16], "",         1.00000,   0.00000,	0.0,32767.0,     0 ; * ( 32 bytes)
+     port_Hysteresis   				= array ,  U16,    256,    	[ 16x2], "",         1.00000,   0.00000,	0.0, 32767.0,     0
+	 ; * ( 32 bytes)
 ;hysteresis value for on/off
-	 port_CanId	   					= array ,  U08,    192,    	[  16], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
+	 port_CanId	   					= array ,  U08,    320,    	[ 16x2], "",         1.00000,   0.00000,   0.00,  255.00,     0
+	 ; * ( 16 bytes)
 
-	 ;ends at 206
-        unused2_208        = scalar, U08,    208,       "",       1, 0, 0, 255, 0
-        unused2_209        = scalar, U08,    209,       "",       1, 0, 0, 255, 0
-        unused2_210        = scalar, U08,    210,       "",       1, 0, 0, 255, 0
-        unused2_211        = scalar, U08,    211,       "",       1, 0, 0, 255, 0
-        unused2_212        = scalar, U08,    212,       "",       1, 0, 0, 255, 0
-        unused2_213        = scalar, U08,    213,       "",       1, 0, 0, 255, 0
-        unused2_214        = scalar, U08,    214,       "",       1, 0, 0, 255, 0
-        unused2_215        = scalar, U08,    215,       "",       1, 0, 0, 255, 0
-        unused2_216        = scalar, U08,    216,       "",       1, 0, 0, 255, 0
-        unused2_217        = scalar, U08,    217,       "",       1, 0, 0, 255, 0
-        unused2_218        = scalar, U08,    218,       "",       1, 0, 0, 255, 0
-        unused2_219        = scalar, U08,    219,       "",       1, 0, 0, 255, 0
-        unused2_220        = scalar, U08,    220,       "",       1, 0, 0, 255, 0
-        unused2_221        = scalar, U08,    221,       "",       1, 0, 0, 255, 0
-        unused2_222        = scalar, U08,    222,       "",       1, 0, 0, 255, 0
-        unused2_223        = scalar, U08,    223,       "",       1, 0, 0, 255, 0
-        unused2_224        = scalar, U08,    224,       "",       1, 0, 0, 255, 0
-        unused2_225        = scalar, U08,    225,       "",       1, 0, 0, 255, 0
-        unused2_226        = scalar, U08,    226,       "",       1, 0, 0, 255, 0
-        unused2_227        = scalar, U08,    227,       "",       1, 0, 0, 255, 0
-        unused2_228        = scalar, U08,    228,       "",       1, 0, 0, 255, 0
-        unused2_229        = scalar, U08,    229,       "",       1, 0, 0, 255, 0
-        unused2_230        = scalar, U08,    230,       "",       1, 0, 0, 255, 0
-        unused2_231        = scalar, U08,    231,       "",       1, 0, 0, 255, 0
-        unused2_232        = scalar, U08,    232,       "",       1, 0, 0, 255, 0
-        unused2_233        = scalar, U08,    233,       "",       1, 0, 0, 255, 0
-        unused2_234        = scalar, U08,    234,       "",       1, 0, 0, 255, 0
-        unused2_235        = scalar, U08,    235,       "",       1, 0, 0, 255, 0 
-		unused2_236        = scalar, U08,    236,       "",       1, 0, 0, 255, 0
-        unused2_237        = scalar, U08,    237,       "",       1, 0, 0, 255, 0
-        unused2_238        = scalar, U08,    238,       "",       1, 0, 0, 255, 0
-        unused2_239        = scalar, U08,    239,       "",       1, 0, 0, 255, 0
-        unused2_240        = scalar, U08,    240,       "",       1, 0, 0, 255, 0
-        unused2_241        = scalar, U08,    241,       "",       1, 0, 0, 255, 0
-        unused2_242        = scalar, U08,    242,       "",       1, 0, 0, 255, 0
-        unused2_243        = scalar, U08,    243,       "",       1, 0, 0, 255, 0
-        unused2_244        = scalar, U08,    244,       "",       1, 0, 0, 255, 0
-        unused2_245        = scalar, U08,    245,       "",       1, 0, 0, 255, 0
-		unused2_246        = scalar, U08,    246,       "",       1, 0, 0, 255, 0
-        unused2_247        = scalar, U08,    247,       "",       1, 0, 0, 255, 0
-        unused2_248        = scalar, U08,    248,       "",       1, 0, 0, 255, 0
-        unused2_249        = scalar, U08,    249,       "",       1, 0, 0, 255, 0
-        unused2_250        = scalar, U08,    250,       "",       1, 0, 0, 255, 0
-        unused2_251        = scalar, U08,    251,       "",       1, 0, 0, 255, 0
-        unused2_252        = scalar, U08,    252,       "",       1, 0, 0, 255, 0
-        unused2_253        = scalar, U08,    253,       "",       1, 0, 0, 255, 0
-        unused2_254        = scalar, U08,    254,       "",       1, 0, 0, 255, 0
-        unused2_255        = scalar, U08,    255,       "",       1, 0, 0, 255, 0
+	 ;ends at 352
+       ; unused2_208        = scalar, U08,    208,       "",       1, 0, 0, 255, 0
+       ; unused2_209        = scalar, U08,    209,       "",       1, 0, 0, 255, 0
+       ; unused2_210        = scalar, U08,    210,       "",       1, 0, 0, 255, 0
+       ; unused2_211        = scalar, U08,    211,       "",       1, 0, 0, 255, 0
+       ; unused2_212        = scalar, U08,    212,       "",       1, 0, 0, 255, 0
+       ; unused2_213        = scalar, U08,    213,       "",       1, 0, 0, 255, 0
+       ; unused2_214        = scalar, U08,    214,       "",       1, 0, 0, 255, 0
+       ; unused2_215        = scalar, U08,    215,       "",       1, 0, 0, 255, 0
+       ; unused2_216        = scalar, U08,    216,       "",       1, 0, 0, 255, 0
+       ; unused2_217        = scalar, U08,    217,       "",       1, 0, 0, 255, 0
+       ; unused2_218        = scalar, U08,    218,       "",       1, 0, 0, 255, 0
+       ; unused2_219        = scalar, U08,    219,       "",       1, 0, 0, 255, 0
+       ; unused2_220        = scalar, U08,    220,       "",       1, 0, 0, 255, 0
+       ; unused2_221        = scalar, U08,    221,       "",       1, 0, 0, 255, 0
+       ; unused2_222        = scalar, U08,    222,       "",       1, 0, 0, 255, 0
+       ; unused2_223        = scalar, U08,    223,       "",       1, 0, 0, 255, 0
+       ; unused2_224        = scalar, U08,    224,       "",       1, 0, 0, 255, 0
+       ; unused2_225        = scalar, U08,    225,       "",       1, 0, 0, 255, 0
+       ; unused2_226        = scalar, U08,    226,       "",       1, 0, 0, 255, 0
+       ; unused2_227        = scalar, U08,    227,       "",       1, 0, 0, 255, 0
+       ; unused2_228        = scalar, U08,    228,       "",       1, 0, 0, 255, 0
+       ; unused2_229        = scalar, U08,    229,       "",       1, 0, 0, 255, 0
+       ;; unused2_230        = scalar, U08,    230,       "",       1, 0, 0, 255, 0
+       ; unused2_231        = scalar, U08,    231,       "",       1, 0, 0, 255, 0
+       ; unused2_232        = scalar, U08,    232,       "",       1, 0, 0, 255, 0
+       ; unused2_233        = scalar, U08,    233,       "",       1, 0, 0, 255, 0
+       ; unused2_234        = scalar, U08,    234,       "",       1, 0, 0, 255, 0
+       ; unused2_235        = scalar, U08,    235,       "",       1, 0, 0, 255, 0 
+	;	unused2_236        = scalar, U08,    236,       "",       1, 0, 0, 255, 0
+     ;   unused2_237        = scalar, U08,    237,       "",       1, 0, 0, 255, 0
+     ;   unused2_238        = scalar, U08,    238,       "",       1, 0, 0, 255, 0
+     ;   unused2_239        = scalar, U08,    239,       "",       1, 0, 0, 255, 0
+     ;   unused2_240        = scalar, U08,    240,       "",       1, 0, 0, 255, 0
+     ;   unused2_241        = scalar, U08,    241,       "",       1, 0, 0, 255, 0
+     ;   unused2_242        = scalar, U08,    242,       "",       1, 0, 0, 255, 0
+     ;   unused2_243        = scalar, U08,    243,       "",       1, 0, 0, 255, 0
+     ;   unused2_244        = scalar, U08,    244,       "",       1, 0, 0, 255, 0
+     ;   unused2_245        = scalar, U08,    245,       "",       1, 0, 0, 255, 0
+	;	unused2_246        = scalar, U08,    246,       "",       1, 0, 0, 255, 0
+    ;    unused2_247        = scalar, U08,    247,       "",       1, 0, 0, 255, 0
+    ;    unused2_248        = scalar, U08,    248,       "",       1, 0, 0, 255, 0
+    ;    unused2_249        = scalar, U08,    249,       "",       1, 0, 0, 255, 0
+    ;    unused2_250        = scalar, U08,    250,       "",       1, 0, 0, 255, 0
+    ;    unused2_251        = scalar, U08,    251,       "",       1, 0, 0, 255, 0
+    ;    unused2_252        = scalar, U08,    252,       "",       1, 0, 0, 255, 0
+    ;    unused2_253        = scalar, U08,    253,       "",       1, 0, 0, 255, 0
+    ;    unused2_254        = scalar, U08,    254,       "",       1, 0, 0, 255, 0
+    ;    unused2_255        = scalar, U08,    255,       "",       1, 0, 0, 255, 0
 		
 ;---------------------------------------------------------------------------------	 
 [ConstantsExtensions]
@@ -734,7 +745,7 @@ menuDialog = main
             panel = outputtestout6,{DoutchanActive6}
             panel = outputtestout7,{DoutchanActive7}
             panel = outputtestout8,{DoutchanActive8}
-			
+						
     dialog = outputtest_2, "Output Test 9-16", xAxis
             panel = outputtestout9,{DoutchanActive9}
             panel = outputtestout10,{DoutchanActive10}
@@ -755,10 +766,10 @@ menuDialog = main
             panel = outputtest_warningmessage
 			
 	dialog = output_port_setup_south
-			field = "enabling a output that has no defined active pin in the selected board layout will be cancelled when it is next loaded and will not be saved!"
-			
+			field = !"ENABLING a output that has no defined active pin in the selected board layout will NOT FUNCTION!"
+			field = !"It will also be DISABLED when it is next loaded and will NOT be saved!"
 	dialog = universal_io, "universal IO 1-16", border
-		;panel = output_port_setup_south, South
+		panel = output_port_setup_south, South
 		;panel = output_port_selection, Center
 		panel = output_port_setup, North			
 		
