add analog override test mode.

--- a/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
+++ b/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
@@ -14,7 +14,7 @@
    versionInfo    = "S"  ; Put this in the title bar.
 #endif
    ;signature      = 20
-   signature      = "speeduino_mini_GPIOV0.003 201706"
+   signature      = "speeduino_mini_GPIOV3.001 201802"
 
    [TunerStudio]
    iniSpecVersion = 3.57
@@ -59,7 +59,8 @@
     EXin12Alias  = string, ASCII, 20 
     EXin13Alias  = string, ASCII, 20 
     EXin14Alias  = string, ASCII, 20 
-    EXin15Alias  = string, ASCII, 20 
+    EXin15Alias  = string, ASCII, 20    
+	
 [Constants]
 
    ;----------------------------------------------------------------------------
@@ -112,20 +113,20 @@
    ;----------------------------------------------------------------------------
 
    endianness          = little
-   nPages              = 2
-   pageSize            = 128, 353
-   pageIdentifier      = "\$tsCanId\x01" , "\$tsCanId\x02"
+   nPages              = 3
+   pageSize            = 128, 353, 16
+   pageIdentifier      = "\$tsCanId\x01" , "\$tsCanId\x02", "\$tsCanId\x03"
    pageActivationDelay = 10
 #if CAN_COMMANDS
-   burnCommand         = "r\$tsCanId\x42\x01\x00\x00\x00" , "r\$tsCanId\x42\x02\x00\x00\x00"
-   pageActivate        = "r\$tsCanId\x50\x01\x00\x00\x00" , "r\$tsCanId\x50\x02\x00\x00\x00"
-   pageReadCommand     = "r\$tsCanId\x56%2o%2c" , "r\$tsCanId\x56%2o%2c"
-   pageValueWrite      = "r\$tsCanId\x57%2o%v" , "r\$tsCanId\x57%2o%v"
+   burnCommand         = "r\$tsCanId\x42\x01\x00\x00\x00" , "r\$tsCanId\x42\x02\x00\x00\x00", "r\$tsCanId\x42\x03\x00\x00\x00"
+   pageActivate        = "r\$tsCanId\x50\x01\x00\x00\x00" , "r\$tsCanId\x50\x02\x00\x00\x00", "r\$tsCanId\x50\x03\x00\x00\x00"
+   pageReadCommand     = "r\$tsCanId\x56%2o%2c" , "r\$tsCanId\x56%2o%2c" , "r\$tsCanId\x56%2o%2c"
+   pageValueWrite      = "r\$tsCanId\x57%2o%v" , "r\$tsCanId\x57%2o%v" , "r\$tsCanId\x57%2o%v"
 #else   
-   burnCommand         = "B\001" , "B\002"
-   pageActivate        = "P\001" , "P\002"
-   pageReadCommand     = "V%2o%2c" , "V%2o%2c"
-   pageValueWrite      = "W\x01%2o%v" , "W\x02%2o%v"
+   burnCommand         = "B\001" , "B\002", "B\003"
+   pageActivate        = "P\001" , "P\002", "P\003"
+   pageReadCommand     = "V%2o%2c" , "V%2o%2c", "V%2o%2c"
+   pageValueWrite      = "W\x01%2o%v" , "W\x02%2o%v", "W\x03%2o%v"
 #endif
    ;  pageChunkWrite      = ""      ; No chunk write for standard MS
 
@@ -308,6 +309,8 @@ page = 1
         num_bytes14   = bits,   U08,    86, [0:1], "INVALID", "1", "2", "INVALID"
         num_bytes15   = bits,   U08,    87, [0:1], "INVALID", "1", "2", "INVALID"		
 		
+		;cmdtestain1  = scalar, U16, "", 1, 0, 0, 1024, 0
+		
         unused1_88         = scalar, U08,    88,        "",       1, 0, 0, 2, 0
         unused1_89         = scalar, U08,    89,        "",       1, 0, 0, 2, 0
         unused1_90         = scalar, U08,    90,        "",       1, 0, 0, 2, 0
@@ -432,7 +435,30 @@ page = 2
     ;    unused2_253        = scalar, U08,    253,       "",       1, 0, 0, 255, 0
     ;    unused2_254        = scalar, U08,    254,       "",       1, 0, 0, 255, 0
     ;    unused2_255        = scalar, U08,    255,       "",       1, 0, 0, 255, 0
-		
+	
+;-------------------------------------------------------------------------------
+page = 3	 
+    ; this page is NOT saved in eeprom!!
+	
+	;cmdtestain1        = scalar, U08,    88,        "",       1, 0, 0, 254, 0
+    ; cmdtestData		= array ,  U08,    0,    	[ 16], "",   1.00000,   0.00000,   0.00,    254.00,     0 
+	cmdtestData0 = scalar, U08, 0, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData1 = scalar, U08, 1, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData2 = scalar, U08, 2, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData3 = scalar, U08, 3, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData4 = scalar, U08, 4, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData5 = scalar, U08, 5, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData6 = scalar, U08, 6, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData7 = scalar, U08, 7, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData8 = scalar, U08, 8, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData9 = scalar, U08, 9, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData10 = scalar, U08, 10, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData11 = scalar, U08, 11, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData12 = scalar, U08, 12, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData13 = scalar, U08, 13, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData14 = scalar, U08, 14, "", 1, 0, 0, 255, 0, noMsqSave
+	cmdtestData15 = scalar, U08, 15, "", 1, 0, 0, 255, 0, noMsqSave
+	 
 ;---------------------------------------------------------------------------------	 
 [ConstantsExtensions]
 ;    requiresPowerCycle = boostMaxDuty
@@ -507,6 +533,8 @@ menuDialog = main
    menuDialog = main
 	  menu = "Hardware Testing"
 		subMenu = outputtest1, "Test Output Hardware"
+		subMenu = aintest, "Analog Data Value Force Test"
+		
 #endif	 
 	 
 		menu = "Help"
@@ -541,6 +569,11 @@ menuDialog = main
 ; dialogs can be nested and can be mixed with fields
 
     dialog = device_config, "Device Configuration"
+#if CAN_COMMANDS
+    	displayOnlyField = "GPIO TunerStudio CanID", tsCanId
+		field = !"The maincontroller CanID in project properties must be set to this for serial communication to work!!" 
+		field = ""
+#endif		
         field = "GPIO Device Real CanID", master_controller_address
         field = "GPIO Board Pin Layout",       pinLayout 
 		field = "Connection to Speeduino Type", speeduinoConnection
@@ -761,13 +794,90 @@ menuDialog = main
 ;	        topicHelp = "http://speeduino.com/wiki/index.php/Hardware_testing_page"
 			panel = enableoutputtestbuttons
             panel = outputtest_1,North
-            panel = outputtest_2,South
-            
+            panel = outputtest_2,South            
             panel = outputtest_warningmessage
+
+	dialog = enableaintestbuttons, "Enable Ain Test Controls", xAxis
+		;commandButton = "Label Text", command, { Enabled Condition }, optionalFlags
+
+		; The rem > 0 expression is just for testing.. It works when the arduino is on the Stim with rpm.
+		; a status bit there would be the expected real expression
+		commandButton = "Enable Ain Test Mode", cmdEnableAINTestMode,{!aintestactive }
+
+		; if clickOnCloseIfEnabled is set, then the command assigned to this button will be run on the
+		; dialog close, but only if the enable condition is true
+		; valid click flags are:
+		; clickOnCloseIfEnabled - the command will be sent on dialog close if active condition is true
+		; clickOnCloseIfDisabled - the command will be sent on dialog close if active condition is false
+		; clickOnClose - the command will be sent on dialog close always
+		commandButton = "Stop AIN Test Mode", cmdStopAINTestMode,{aintestactive}, clickOnCloseIfEnabled
 			
+	dialog = aintest_4, "" , yAxis
+	        slider = "Ain1", cmdtestData0 , horizontal, {aintestactive}
+			slider = "Ain2", cmdtestData1 , horizontal, {aintestactive}			
+			slider = "Ain3", cmdtestData2 , horizontal, {aintestactive}
+			slider = "Ain4", cmdtestData3 , horizontal, {aintestactive}
+	        slider = "Ain5", cmdtestData4 , horizontal, {aintestactive}
+			slider = "Ain6", cmdtestData5 , horizontal, {aintestactive}			
+			slider = "Ain7", cmdtestData6 , horizontal, {aintestactive}
+			slider = "Ain8", cmdtestData7 , horizontal, {aintestactive}
+			
+	dialog = aintest_5, "", yAxis
+			commandButton = "SEND", cmdtestain1send, {aintestactive}
+			commandButton = "SEND", cmdtestain2send, {aintestactive}
+			commandButton = "SEND", cmdtestain3send, {aintestactive}
+			commandButton = "SEND", cmdtestain4send, {aintestactive}
+			commandButton = "SEND", cmdtestain5send, {aintestactive}
+			commandButton = "SEND", cmdtestain6send, {aintestactive}
+			commandButton = "SEND", cmdtestain7send, {aintestactive}
+			commandButton = "SEND", cmdtestain8send, {aintestactive}
+			
+	dialog = aintest_2, "" , xAxis
+	        panel = aintest_4
+		    panel = aintest_5
+
+	dialog = aintest_7, "" , yAxis
+	        slider = "Ain9", cmdtestData8 , horizontal, {aintestactive}
+			slider = "Ain10", cmdtestData9 , horizontal, {aintestactive}			
+			slider = "Ain11", cmdtestData10 , horizontal, {aintestactive}
+			slider = "Ain12", cmdtestData11 , horizontal, {aintestactive}
+	        slider = "Ain13", cmdtestData12 , horizontal, {aintestactive}
+			slider = "Ain14", cmdtestData13 , horizontal, {aintestactive}			
+			slider = "Ain15", cmdtestData14 , horizontal, {aintestactive}
+			slider = "Ain16", cmdtestData15 , horizontal, {aintestactive}
+			
+	dialog = aintest_8, "", yAxis
+			commandButton = "SEND", cmdtestain9send, {aintestactive}
+			commandButton = "SEND", cmdtestain10send, {aintestactive}
+			commandButton = "SEND", cmdtestain11send, {aintestactive}
+			commandButton = "SEND", cmdtestain12send, {aintestactive}
+			commandButton = "SEND", cmdtestain13send, {aintestactive}
+			commandButton = "SEND", cmdtestain14send, {aintestactive}
+			commandButton = "SEND", cmdtestain15send, {aintestactive}
+			commandButton = "SEND", cmdtestain16send, {aintestactive}
+			
+	dialog = aintest_3, "" , xAxis
+	        panel = aintest_7
+		    panel = aintest_8
+
+	dialog = aintest_1, "" , xAxis
+	        panel = aintest_2
+		    panel = aintest_3
+			
+	dialog = aintest_msg, ""
+           field = #"value sent is 4* the value displayed on the slider ie 1 == 4 , 255 == 1020"	
+		   field = #"The value will persist until the test ends or the tab is closed"
+		   
+    dialog = aintest, "Analog Input Value Force Test", yAxis
+	       panel = enableaintestbuttons
+		   panel = aintest_1
+		   panel = aintest_msg
+
+	
 	dialog = output_port_setup_south
 			field = !"ENABLING a output that has no defined active pin in the selected board layout will NOT FUNCTION!"
 			field = !"It will also be DISABLED when it is next loaded and will NOT be saved!"
+			
 	dialog = universal_io, "universal IO 1-16", border
 		panel = output_port_setup_south, South
 		;panel = output_port_selection, Center
@@ -855,58 +965,81 @@ cmdtestout1450dc = "r\$tsCanId\x45\x0E\x04\x00\x00"
 cmdtestout1550dc = "r\$tsCanId\x45\x0F\x04\x00\x00"
 cmdtestout1650dc = "r\$tsCanId\x45\x10\x04\x00\x00"		;cmd 1040
 
-#else
-cmdStopTestMode = "E\x00\x01"
-cmdEnableTestMode = "E\x01\x01"
+cmdStopAINTestMode   = "r\$tsCanId\x45\x00\x05\x00\x00"	;cmd 1280
+cmdEnableAINTestMode = "r\$tsCanId\x45\x01\x05\x00\x00"	;cmd 1281
 
-cmdtestout1on = "E\x01\x02"
-cmdtestout1off = "E\x02\x02"
-cmdtestout150dc = "E\x03\x02"
-cmdtestout2on = "E\x04\x02"
-cmdtestout2off = "E\x05\x02"
-cmdtestout250dc = "E\x06\x02"
-cmdtestout3on = "E\x07\x02"
-cmdtestout3off = "E\x08\x02"
-cmdtestout350dc = "E\x09\x02"
-cmdtestout4on = "E\x0A\x02"
-cmdtestout4off = "E\x0B\x02"
-cmdtestout450dc = "E\x0C\x02"
-cmdtestout5on = "E\x0D\x02"
-cmdtestout5off = "E\x0E\x02"
-cmdtestout550dc = "E\x0F\x02"
-cmdtestout6on = "E\x10\x02"
-cmdtestout6off = "E\x11\x02"
-cmdtestout650dc = "E\x12\x02"
-cmdtestout7on = "E\x13\x02"
-cmdtestout7off = "E\x14\x02"
-cmdtestout750dc = "E\x15\x02"
-cmdtestout8on = "E\x16\x02"
-cmdtestout8off = "E\x17\x02"
-cmdtestout850dc = "E\x18\x02"
-cmdtestout9on = "E\x19\x02"
-cmdtestout9off = "E\x1A\x02"
-cmdtestout950dc = "E\x1B\x02"
-cmdtestout10on = "E\x1C\x02"
-cmdtestout10off = "E\x1D\x02"
-cmdtestout1050dc = "E\x1E\x02"
-cmdtestout11on = "E\x1F\x02"
-cmdtestout11off = "E\x20\x02"
-cmdtestout1150dc = "E\x21\x02"
-cmdtestout12on = "E\x22\x02"
-cmdtestout12off = "E\x23\x02"
-cmdtestout1250dc = "E\x24\x02"
-cmdtestout13on = "E\x25\x02"
-cmdtestout13off = "E\x26\x02"
-cmdtestout1350dc = "E\x27\x02"
-cmdtestout14on = "E\x28\x02"
-cmdtestout14off = "E\x29\x02"
-cmdtestout1450dc = "E\x2A\x02"
-cmdtestout15on = "E\x2B\x02"
-cmdtestout15off = "E\x2C\x02"
-cmdtestout1550dc = "E\x2D\x02"
-cmdtestout16on = "E\x2E\x02"
-cmdtestout16off = "E\x2F\x02"
-cmdtestout1650dc = "E\x30\x02"
+cmdtestain1send = "r\$tsCanId\x45\x01\x06\x00\x0"		;cmd 1537
+cmdtestain2send = "r\$tsCanId\x45\x02\x06\x00\x00"		;cmd 1538
+cmdtestain3send = "r\$tsCanId\x45\x03\x06\x00\x00"
+cmdtestain4send = "r\$tsCanId\x45\x04\x06\x00\x00"		;cmd 1540
+cmdtestain5send = "r\$tsCanId\x45\x05\x06\x00\x00"		;cmd 1541
+cmdtestain6send = "r\$tsCanId\x45\x06\x06\x00\x00"
+cmdtestain7send = "r\$tsCanId\x45\x07\x06\x00\x00"		;cmd 1543
+cmdtestain8send = "r\$tsCanId\x45\x08\x06\x00\x00"		;cmd 1544
+cmdtestain9send = "r\$tsCanId\x45\x09\x06\x00\x00"
+cmdtestain10send = "r\$tsCanId\x45\x0A\x06\x00\x00"		;cmd 1546
+cmdtestain11send = "r\$tsCanId\x45\x0B\x06\x00\x00"
+cmdtestain12send = "r\$tsCanId\x45\x0C\x06\x00\x00"
+cmdtestain13send = "r\$tsCanId\x45\x0D\x06\x00\x00"     ;cmd 1549
+cmdtestain14send = "r\$tsCanId\x45\x0E\x06\x00\x00"		;cmd 1550
+cmdtestain15send = "r\$tsCanId\x45\x0F\x06\x00\x00"
+cmdtestain16send = "r\$tsCanId\x45\x10\x06\x00\x00"		;cmd 1552
+
+#else
+
+cmdStopTestMode   = "E\x00\x01"	;cmd 256
+cmdEnableTestMode = "E\x01\x01"	;cmd 257
+
+cmdtestout1on = "E\x01\x02"		;cmd 513
+cmdtestout2on = "E\x02\x02"		;cmd 514
+cmdtestout3on = "E\x03\x02"
+cmdtestout4on = "E\x04\x02"		;cmd 516
+cmdtestout5on = "E\x05\x02"		;cmd517
+cmdtestout6on = "E\x06\x02"
+cmdtestout7on = "E\x07\x02"		;cmd519
+cmdtestout8on = "E\x08\x02"		;cmd520
+cmdtestout9on = "E\x09\x02"
+cmdtestout10on = "E\x0A\x02"	;cmd522
+cmdtestout11on = "E\x0B\x02"
+cmdtestout12on = "E\x0C\x02"
+cmdtestout13on = "E\x0D\x02"
+cmdtestout14on = "E\x0E\x02"	;cmd526
+cmdtestout15on = "E\x0F\x02"
+cmdtestout16on = "E\x10\x02"	;cmd528
+
+cmdtestout1off = "E\x01\x03"	;cmd 769
+cmdtestout2off = "E\x02\x03"	;cmd 770
+cmdtestout3off = "E\x03\x03"
+cmdtestout4off = "E\x04\x03"	;cmd 772
+cmdtestout5off = "E\x05\x03"
+cmdtestout6off = "E\x06\x03"
+cmdtestout7off = "E\x07\x03"
+cmdtestout8off = "E\x08\x03"
+cmdtestout9off = "E\x09\x03"
+cmdtestout10off = "E\x0A\x03"
+cmdtestout11off = "E\x0B\x03"
+cmdtestout12off = "E\x0C\x03"
+cmdtestout13off = "E\x0D\x03"
+cmdtestout14off = "E\x0E\x03"
+cmdtestout15off = "E\x0F\x03"
+cmdtestout16off = "E\x10\x03"		;cmd 784
+
+cmdtestout150dc = "E\x01\x04"		;cmd 1025
+cmdtestout250dc = "E\x02\x04"
+cmdtestout350dc = "E\x03\x04"
+cmdtestout450dc = "E\x04\x04"
+cmdtestout550dc = "E\x05\x04"
+cmdtestout650dc = "E\x06\x04"		;cmd
+cmdtestout750dc = "E\x07\x04"
+cmdtestout850dc = "E\x08\x04"
+cmdtestout950dc = "E\x09\x04"
+cmdtestout1050dc = "E\x0A\x04"
+cmdtestout1150dc = "E\x0B\x04"
+cmdtestout1250dc = "E\x0C\x04"
+cmdtestout1350dc = "E\x0D\x04"
+cmdtestout1450dc = "E\x0E\x04"
+cmdtestout1550dc = "E\x0F\x04"
+cmdtestout1650dc = "E\x10\x04"		;cmd 1040
 
 #endif
 
@@ -1200,6 +1333,8 @@ cmdtestout1650dc = "E\x30\x02"
    ;testoutputs      = scalar,   U08,    12, "bits",   1.000, 0.000
    testenabled      = bits,    U08,	12, [0:0]
    testactive       = bits,    U08,	12, [1:1]
+   aintestenabled   = bits,    U08,	12, [2:2]
+   aintestactive    = bits,    U08,	12, [3:3]
    
    digitalinputs1_8	= scalar,  U08, 13, "bits", 1.000, 0.000
    digitalinput1    = bits,    U08,	13, [0:0]
