change ini spec back to 3.54 and unset can commands

--- a/GPIO MINI/mini_gpiov3_005/reference/mini gpiov3_005.ini
+++ b/GPIO MINI/mini_gpiov3_005/reference/mini gpiov3_005.ini
@@ -1,5 +1,5 @@
 ;-------------------------------------------------------------------------------
-#set CAN_COMMANDS
+#unset CAN_COMMANDS
 #set enablehardware_test
 
 [MegaTune]
@@ -17,7 +17,7 @@
    signature      = "speeduino_mini_GPIOV3.005 201802"
 
    [TunerStudio]
-   iniSpecVersion = 3.57
+   iniSpecVersion = 3.54
 
 ;-------------------------------------------------------------------------------
 
