--- a/GPIO MINI/mini_gpiov3_005/reference/mini gpiov3_005.ini
+++ b/GPIO MINI/mini_gpiov3_005/reference/mini gpiov3_005.ini
@@ -114,7 +114,7 @@
 
    endianness          = little
    nPages              = 3
-   pageSize            = 128, 353, 16
+   pageSize            = 128, 352, 16
    pageIdentifier      = "\$tsCanId\x01" , "\$tsCanId\x02", "\$tsCanId\x03"
    pageActivationDelay = 10
 #if CAN_COMMANDS
@@ -160,7 +160,7 @@
  #define CAN_ADDRESS_HEX_07XX = "0x700", "0x701", "0x702", "0x703", "0x704", "0x705", "0x706", "0x707", "0x708", "0x709", "0x70A", "0x70B", "0x70C", "0x70D", "0x70E", "0x70F", "0x710", "0x711", "0x712", "0x713", "0x714", "0x715", "0x716", "0x717", "0x718", "0x719", "0x71A", "0x71B", "0x71C", "0x71D", "0x71E", "0x71F", "0x720", "0x721", "0x722", "0x723", "0x724", "0x725", "0x726", "0x727", "0x728", "0x729", "0x72A", "0x72B", "0x72C", "0x72D", "0x72E", "0x72F", "0x730", "0x731", "0x732", "0x733", "0x734", "0x735", "0x736", "0x737", "0x738", "0x739", "0x73A", "0x73B", "0x73C", "0x73D", "0x73E", "0x73F", "0x740", "0x741", "0x742", "0x743", "0x744", "0x745", "0x746", "0x747", "0x748", "0x749", "0x74A", "0x74B", "0x74C", "0x74D", "0x74E", "0x74F", "0x750", "0x751", "0x752", "0x753", "0x754", "0x755", "0x756", "0x757", "0x758", "0x759", "0x75A", "0x75B", "0x75C", "0x75D", "0x75E", "0x75F" ,"0x760", "0x761", "0x762", "0x763", "0x764", "0x765", "0x766", "0x767", "0x768", "0x769", "0x76A", "0x76B", "0x76C", "0x76D", "0x76E", "0x76F", "0x770", "0x771", "0x772", "0x773", "0x774", "0x775", "0x776", "0x777", "0x778", "0x779", "0x77A", "0x77B", "0x77C", "0x77D", "0x77E", "0x77F", "0x780", "0x781", "0x782", "0x783", "0x784", "0x785", "0x786", "0x787", "0x788", "0x789", "0x78A", "0x78B", "0x78C", "0x78D", "0x78E", "0x78F" ,"0x790", "0x791", "0x792", "0x793", "0x794", "0x795", "0x796", "0x797", "0x798", "0x799", "0x79A", "0x79B", "0x79C", "0x79D", "0x79E", "0x79F", "0x7A0", "0x7A1", "0x7A2", "0x7A3", "0x7A4", "0x7A5", "0x7A6", "0x7A7", "0x7A8", "0x7A9", "0x7AA", "0x7AB", "0x7AC", "0x7AD", "0x7AE", "0x7AF", "0x7B0", "0x7B1", "0x7B2", "0x7B3", "0x7B4", "0x7B5", "0x7B6", "0x7B7", "0x7B8", "0x7B9", "0x7BA", "0x7BB", "0x7BC", "0x7BD", "0x7BE", "0x7BF" ,"0x7C0", "0x7C1", "0x7C2", "0x7C3", "0x7C4", "0x7C5", "0x7C6", "0x7C7", "0x7C8", "0x7C9", "0x7CA", "0x7CB", "0x7CC", "0x7CD", "0x7CE", "0x7CF", "0x7D0", "0x7D1", "0x7D2", "0x7D3", "0x7D4", "0x7D5", "0x7D6", "0x7D7", "0x7D8", "0x7D9", "0x7DA", "0x7DB", "0x7DC", "0x7DD", "0x7DE", "0x7DF", "0x7E0", "0x7E1", "0x7E2", "0x7E3", "0x7E4", "0x7E5", "0x7E6", "0x7E7", "0x7E8", "0x7E9", "0x7EA", "0x7EB", "0x7EC", "0x7ED", "0x7EE", "0x7EF" ,"0x7F0", "0x7F1", "0x7F2", "0x7F3", "0x7F4", "0x7F5", "0x7F6", "0x7F7", "0x7F8", "0x7F9", "0x7FA", "0x7FB", "0x7FC", "0x7FD", "0x7FE", "0x7FF"
  #define CAN_ADDRESS_HEX =  $CAN_ADDRESS_HEX_01XX, $CAN_ADDRESS_HEX_02XX, $CAN_ADDRESS_HEX_03XX, $CAN_ADDRESS_HEX_04XX, $CAN_ADDRESS_HEX_05XX, $CAN_ADDRESS_HEX_06XX, $CAN_ADDRESS_HEX_07XX, $CAN_ADDRESS_HEX_inv255
   
-#define PIN_LAYOUT = "ProMini GPIO v0.002", "Mega2560 GPIO v0.003", "STM32 BluePill GPIO V0.003", "Speeduino v0.3", "Speeduino v0.4", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "Teensy 3.5 REf", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID"  
+ #define PIN_LAYOUT = "ProMini GPIO v0.002", "Mega2560 GPIO v0.003", "STM32 BluePill GPIO V0.003", "Speeduino v0.3", "Speeduino v0.4", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "Teensy 3.5 REf", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "SAMD Ref", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID"  
 
   #define OUT_PORT_NUMBERS = "INVALID", "Out 1", "Out 2", "Out 3", "Out 4", "Out 5", "Out 6", "Out 7", "Out 8", "Out 9", "Out 10", "Out 11", "Out 12", "Out 13", "Out 14", "Out 15", "Out 16", "INVALID", "INVALID","INVALID","INVALID","INVALID", $TENinv
  #define IN_PORT_NUMBERS = "In 1", "In 2", "In 3", "In 4", "In 5", "In 6", "In 7", "In 8", "In 9", "In 10", "In 11", "In 12", "In 13", "In 14", "In 15", "In 16", $SIXTEENinv
@@ -813,48 +813,48 @@ menuDialog = main
 		commandButton = "Stop AIN Test Mode", cmdStopAINTestMode,{aintestactive}, clickOnCloseIfEnabled
 			
 	dialog = aintest_4, "" , yAxis
-	        slider = "Ain1", cmdtestData0 , horizontal, {aintestactive}
-			slider = "Ain2", cmdtestData1 , horizontal, {aintestactive}			
-			slider = "Ain3", cmdtestData2 , horizontal, {aintestactive}
-			slider = "Ain4", cmdtestData3 , horizontal, {aintestactive}
-	        slider = "Ain5", cmdtestData4 , horizontal, {aintestactive}
-			slider = "Ain6", cmdtestData5 , horizontal, {aintestactive}			
-			slider = "Ain7", cmdtestData6 , horizontal, {aintestactive}
-			slider = "Ain8", cmdtestData7 , horizontal, {aintestactive}
+	        slider = "Ain0", cmdtestData0 , horizontal, {aintestactive && AinchanActive1 }
+			slider = "Ain1", cmdtestData1 , horizontal, {aintestactive && AinchanActive2 }			
+			slider = "Ain2", cmdtestData2 , horizontal, {aintestactive && AinchanActive3 }
+			slider = "Ain3", cmdtestData3 , horizontal, {aintestactive && AinchanActive4 }
+	        slider = "Ain4", cmdtestData4 , horizontal, {aintestactive && AinchanActive5 }
+			slider = "Ain5", cmdtestData5 , horizontal, {aintestactive && AinchanActive6 }			
+			slider = "Ain6", cmdtestData6 , horizontal, {aintestactive && AinchanActive7 }
+			slider = "Ain7", cmdtestData7 , horizontal, {aintestactive && AinchanActive8 }
 			
 	dialog = aintest_5, "", yAxis
-			commandButton = "SEND", cmdtestain1send, {aintestactive}
-			commandButton = "SEND", cmdtestain2send, {aintestactive}
-			commandButton = "SEND", cmdtestain3send, {aintestactive}
-			commandButton = "SEND", cmdtestain4send, {aintestactive}
-			commandButton = "SEND", cmdtestain5send, {aintestactive}
-			commandButton = "SEND", cmdtestain6send, {aintestactive}
-			commandButton = "SEND", cmdtestain7send, {aintestactive}
-			commandButton = "SEND", cmdtestain8send, {aintestactive}
+			commandButton = "SEND", cmdtestain1send, {aintestactive && AinchanActive1 }
+			commandButton = "SEND", cmdtestain2send, {aintestactive && AinchanActive2 }
+			commandButton = "SEND", cmdtestain3send, {aintestactive && AinchanActive3 }
+			commandButton = "SEND", cmdtestain4send, {aintestactive && AinchanActive4 }
+			commandButton = "SEND", cmdtestain5send, {aintestactive && AinchanActive5 }
+			commandButton = "SEND", cmdtestain6send, {aintestactive && AinchanActive6 }
+			commandButton = "SEND", cmdtestain7send, {aintestactive && AinchanActive7 }
+			commandButton = "SEND", cmdtestain8send, {aintestactive && AinchanActive8 }
 			
 	dialog = aintest_2, "" , xAxis
 	        panel = aintest_4
 		    panel = aintest_5
 
 	dialog = aintest_7, "" , yAxis
-	        slider = "Ain9", cmdtestData8 , horizontal, {aintestactive}
-			slider = "Ain10", cmdtestData9 , horizontal, {aintestactive}			
-			slider = "Ain11", cmdtestData10 , horizontal, {aintestactive}
-			slider = "Ain12", cmdtestData11 , horizontal, {aintestactive}
-	        slider = "Ain13", cmdtestData12 , horizontal, {aintestactive}
-			slider = "Ain14", cmdtestData13 , horizontal, {aintestactive}			
-			slider = "Ain15", cmdtestData14 , horizontal, {aintestactive}
-			slider = "Ain16", cmdtestData15 , horizontal, {aintestactive}
+	        slider = "Ain8", cmdtestData8 , horizontal, {aintestactive && AinchanActive9 }
+			slider = "Ain9", cmdtestData9 , horizontal, {aintestactive && AinchanActive10 }			
+			slider = "Ain10", cmdtestData10 , horizontal, {aintestactive && AinchanActive11 }
+			slider = "Ain11", cmdtestData11 , horizontal, {aintestactive && AinchanActive12 }
+	        slider = "Ain12", cmdtestData12 , horizontal, {aintestactive && AinchanActive13 }
+			slider = "Ain13", cmdtestData13 , horizontal, {aintestactive && AinchanActive14 }			
+			slider = "Ain14", cmdtestData14 , horizontal, {aintestactive && AinchanActive15 }
+			slider = "Ain15", cmdtestData15 , horizontal, {aintestactive && AinchanActive16 }
 			
 	dialog = aintest_8, "", yAxis
-			commandButton = "SEND", cmdtestain9send, {aintestactive}
-			commandButton = "SEND", cmdtestain10send, {aintestactive}
-			commandButton = "SEND", cmdtestain11send, {aintestactive}
-			commandButton = "SEND", cmdtestain12send, {aintestactive}
-			commandButton = "SEND", cmdtestain13send, {aintestactive}
-			commandButton = "SEND", cmdtestain14send, {aintestactive}
-			commandButton = "SEND", cmdtestain15send, {aintestactive}
-			commandButton = "SEND", cmdtestain16send, {aintestactive}
+			commandButton = "SEND", cmdtestain9send, {aintestactive && AinchanActive9 }
+			commandButton = "SEND", cmdtestain10send, {aintestactive && AinchanActive10 }
+			commandButton = "SEND", cmdtestain11send, {aintestactive && AinchanActive11 }
+			commandButton = "SEND", cmdtestain12send, {aintestactive && AinchanActive12 }
+			commandButton = "SEND", cmdtestain13send, {aintestactive && AinchanActive13 }
+			commandButton = "SEND", cmdtestain14send, {aintestactive && AinchanActive14 }
+			commandButton = "SEND", cmdtestain15send, {aintestactive && AinchanActive15 }
+			commandButton = "SEND", cmdtestain16send, {aintestactive && AinchanActive16 }
 			
 	dialog = aintest_3, "" , xAxis
 	        panel = aintest_7
@@ -968,7 +968,7 @@ cmdtestout1650dc = "r\$tsCanId\x45\x10\x04\x00\x00"		;cmd 1040
 cmdStopAINTestMode   = "r\$tsCanId\x45\x00\x05\x00\x00"	;cmd 1280
 cmdEnableAINTestMode = "r\$tsCanId\x45\x01\x05\x00\x00"	;cmd 1281
 
-cmdtestain1send = "r\$tsCanId\x45\x01\x06\x00\x0"		;cmd 1537
+cmdtestain1send = "r\$tsCanId\x45\x01\x06\x00\x00"		;cmd 1537
 cmdtestain2send = "r\$tsCanId\x45\x02\x06\x00\x00"		;cmd 1538
 cmdtestain3send = "r\$tsCanId\x45\x03\x06\x00\x00"
 cmdtestain4send = "r\$tsCanId\x45\x04\x06\x00\x00"		;cmd 1540
