changes to signature handling method

--- a/GPIO MINI/mini_gpiov3_005/reference/mini gpiov3_005.ini
+++ b/GPIO MINI/mini_gpiov3_005/reference/mini gpiov3_005.ini
@@ -5,8 +5,8 @@
 [MegaTune]
    MTversion      = 2.25 ; MegaTune itself; needs to match exec version.
 #if CAN_COMMANDS
-   versionInfo    = "r\$tsCanId\x0e\x00\x00\x00\x3c"  ; Put this in the title bar. the 3c if telling to send 60 bytes
-   queryCommand   = "r\$tsCanId\x0f\x00\x00\x00\x1F"  ; Verify against signature. this is what ts sends to look for can devices too...
+   versionInfo    = "r\$tsCanId\x0e\x00\x00\x00\x21"  ; Put this in the title bar. the 3c if telling to send 60 bytes
+   queryCommand   = "r\$tsCanId\x0f\x00\x00\x00\x14"  ; Verify against signature. this is what ts sends to look for can devices too...
    ;queryCommand   = "r\$tsCanId\xAB\x00\x00\x00\x14"  ; the x14 is telling to send 20 bytes back
    	;structure is r\canid\command\offset1\offset2\length1\length2
 #else	
@@ -14,7 +14,7 @@
    versionInfo    = "S"  ; Put this in the title bar.
 #endif
    ;signature      = 20
-   signature      = "speeduino_mini_GPIOV3.005 201802"
+   signature      = "speeduino_mGPIOV3005"
 
    [TunerStudio]
    iniSpecVersion = 3.54
@@ -1429,7 +1429,7 @@ cmdtestain16send = "E\x10\x06"		;cmd 1552
    EXin13			= scalar,   U16,	75,	"",		1.000, 0.000
    EXin14    		= scalar,   U16,	77,	"",		1.000, 0.000
    EXin15		    = scalar,   U16,	79,	"",		1.000, 0.000
-   
+      
    ; Computed output channels.  See "megatuneExamples.ini" for all the
    ; pre-defined variables, search for "???" and you'll see them.
    time             = { timeNow                                      } ; "timeNow" is a parameterless built-in function.
